welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:35: error: type mismatch;
 found   : Unit
 required: Boolean
		if(fini = 0)
                        ^